--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
 
-    <string name="app_name">MyPortfolio</string>
-    <string name="title_section3">Section 3</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section1">Section 1</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Diogo Neves</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">MainActivity</string>
-    <string name="contact_lookup">diogo.neves@gmail.com</string>
+    <string name="title_activity_main">Diogo Neves</string>
+    <string name="debug_text">This is debug text</string>
+    <string name="contact_pic_description">Contact Picture</string>
+    <string name="profession">Software Developer</string>
+    <string name="mobile_number">077 8741 4964</string>
+    <string name="email">mail@diogoneves.com</string>
+    <string name="contact_qr_code">Contact QR Code</string>
 
 </resources>
