Added resume and portfolio fragments and test layouts

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="mobile_number">077 8741 4964</string>
     <string name="email">mail@diogoneves.com</string>
     <string name="contact_qr_code">Contact QR Code</string>
+    <string name="sony_game">Programmer at SCEE</string>
 
 </resources>
